--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -10,12 +10,20 @@
 // }
 
 @font-face {
+  font-family: 'Inter';
+  src: url('../fonts/inter/Inter24pt-Regular.woff2') format('woff2'),
+  url('../fonts/inter/Inter24pt-Regular.woff') format('woff');
+  font-weight: normal;
   font-style: normal;
-  font-weight: 400;
-  font-family: "";
-
   font-display: swap;
-  src:
-    url("../fonts/.woff2") format("woff2"),
-    url("../fonts/.woff") format("woff");
 }
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/inter/Inter24pt-SemiBold.woff2') format('woff2'),
+  url('../fonts/inter/Inter24pt-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
