--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -28,6 +28,7 @@ $fz-default:                        16px;
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+$ff-inter:                          Inter, sans-serif;
 
 // Animation
 // ---------------------------------
