--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/btn";
+@import "blocks/list-bools";
 
 // ---------------------------------
 
