feat: add about block

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,6 +12,9 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
+$color-hawkes-blue:                 #D7DCE9;
+$color-east-bay:                    #4A5368;
+$color-ebony:                       #2B303B;
 
 // Gradient
 
