--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/modal";
 @import "blocks/btn";
 @import "blocks/list-bools";
+@import "blocks/card";
 
 // ---------------------------------
 
