feat: add popover

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 
 @import "vendor/normalize";
 @import "vendor/tailwind";
+@import "vendor/tippyjs";
 // Swiper 7.4.1
 // @import "vendor/swiper";
 
@@ -26,6 +27,7 @@
 @import "blocks/btn";
 @import "blocks/list-bools";
 @import "blocks/card";
+@import "blocks/tippy-theme";
 
 // ---------------------------------
 
