--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/list-bools";
 @import "blocks/card";
 @import "blocks/tippy-theme";
+@import "blocks/text-block";
 
 // ---------------------------------
 
